testCases/parserTestCases/error/idStmtE.cs16
-- Carston Schilds, Feb 21st 2016

void main(void){
-- omitting id
     := y;
    [1] := y;
    ();
-- omitting tail
    x
    x[1]
    foo
}